basic html layout introduced

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en-US"><!--HTML5-->
+<head>
+<title>Krzysztof | GitHub page</title>
+<meta charset="utf-8"> <!--HTML5 - Defines a specific range of text characters which can be used for this document.-->
+</head>
+<!-- CSS Fonts library -->
+<link href="https://fonts.googleapis.com/css?family=Arsenal" rel="stylesheet"><!-- paragraphs -->
+<!-- External CSS -->
+<link rel="stylesheet" type="text/css" href="normalize.css">
+<!-- Internal CSS -->
+<style>
+body{
+font-family: 'Arsenal', sans-serif;
+}
+</style>
+<body>
+<div class="container">
+  <div class="wrapper">
+  <hgroup><!--HTML5-->
+    <h1>Welcome!</h1>
+  </hgroup>
+  <!-- W3C recommends quotes in HTML but single quotes can also be used.-->
+  <p title="Title">Not much going on here yet, practicing git commands today.</p>
+</div>
+</div>
+
+<!-- Javascript for quicker load -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!--<script src="js/script.js"></script>-->
+</body>
+</html>
