--- a/index.html
+++ b/index.html
@@ -1,32 +1,172 @@
 <!DOCTYPE html>
-<html lang="en-US"><!--HTML5-->
-<head>
-<title>Krzysztof | GitHub page</title>
-<meta charset="utf-8"> <!--HTML5 - Defines a specific range of text characters which can be used for this document.-->
-</head>
-<!-- CSS Fonts library -->
-<link href="https://fonts.googleapis.com/css?family=Arsenal" rel="stylesheet"><!-- paragraphs -->
-<!-- External CSS -->
-<link rel="stylesheet" type="text/css" href="normalize.css">
-<!-- Internal CSS -->
+<html>
+<title>kwalder303 | Krzysztof</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body{
-font-family: 'Arsenal', sans-serif;
-}
+html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
-<body>
-<div class="container">
-  <div class="wrapper">
-  <hgroup><!--HTML5-->
-    <h1>Welcome!</h1>
-  </hgroup>
-  <!-- W3C recommends quotes in HTML but single quotes can also be used.-->
-  <p title="Title">Not much going on here yet, practicing git commands today.</p>
-</div>
+<body class="w3-light-grey">
+
+<!-- Page Container -->
+<div class="w3-content w3-margin-top" style="max-width:1400px;">
+
+  <!-- The Grid -->
+  <div class="w3-row-padding">
+
+    <!-- Left Column -->
+    <div class="w3-third">
+
+      <div class="w3-white w3-text-grey w3-card-4">
+        <div class="w3-display-container">
+          <img src="https://avatars2.githubusercontent.com/u/30003306?v=3&s=460" style="width:100%" alt="Avatar">
+          <div class="w3-display-bottomleft w3-container w3-text-light-gray">
+            <h2>Krzysztof</h2>
+          </div>
+        </div>
+        <div class="w3-container">
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web developer / Photographer</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Denver, Colorado</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>kwalder303@gmail.com</p>
+          <!--<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>1224435534</p>-->
+          <hr>
+
+          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue-gray"></i>Proficiency</b></p>
+
+
+          <p>Adobe Photoshop</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:90%">90%</div>
+          </div>
+
+          <p>HTML5/CSS3</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:90%">90%</div>
+          </div>
+
+          <p>JavaScript</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:80%">
+              <div class="w3-center w3-text-white">80%</div>
+            </div>
+          </div>
+
+          <p>PHP</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:80%">
+              <div class="w3-center w3-text-white">80%</div>
+            </div>
+          </div>
+
+          <p>Responsve frameworks</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:80%">80%</div>
+          </div>
+
+          <p>Management</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:50%">50%</div>
+          </div>
+
+          <br>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue-gray"></i>Languages</b></p>
+          <p>English</p>
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-blue-gray" style="height:24px;width:99%"></div>
+          </div>
+          <p>Polish</p>
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-blue-gray" style="height:24px;width:99%"></div>
+          </div>
+
+          <br>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue-gray"></i>Resources</b></p>
+          <a href="https://www.w3schools.com/" target="_blank">https://www.w3schools.com/</a><br>
+          <a href="https://stackoverflow.com/" target="_blank">https://stackoverflow.com/</a><br>
+          <a href="https://www.codeschool.com" target="_blank">https://www.codeschool.com</a><br>
+          <a href="https://codepen.io/" target="_blank">https://codepen.io/</a><br>
+          <a href="https://www.taniarascia.com" target="_blank">https://www.taniarascia.com</a><br>
+<!--
+<a href="" target="_blank"></a><br>
+<a href="" target="_blank"></a><br>
+-->
+        </div>
+      </div><br>
+
+    <!-- End Left Column -->
+    </div>
+
+    <!-- Right Column -->
+    <div class="w3-twothird">
+
+      <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Blog</h2>
+        <!--
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
+          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
+          <p>Web Development! All I need to know in one place</p>
+          <hr>
+        </div>
+        -->
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>About (web development)</b></h5>
+          <p>Starts with music and a good place to tune in is a <a href="https://www.shoutcast.com/">SHOUTcast</a> streaming audio radio station. My favorite for coding is the electronic/ambient genre, because it helps me zone into the code and isolate everything else. My workspace also plays a key role to spending a lot of time in front of computer and I believe it should be creative and rich in texture. Another great place to visit is the <a href="https://www.reddit.com/r/webdev/" target="_blank"> webdev sub reddit</a> which I visit periodically.</p>
+          <hr>
+        </div>
+
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>GitHub</b></h5>
+          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2017</h6>
+          <p>Started github account to practice git, which led me setup this blog which is based on one of the templates offered by w3schools. I selected <a href="https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_cv&stacked=h" target="_blank">this responsive framework</a> over others because it offered a great looking page straight out of the box, it allowed me to dedicate my time to content over design which was my main goal.</p><br>
+        </div>
+      </div>
+
+
+
+      <div class="w3-container w3-card-2 w3-white">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Professional experience</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Web developer @ West Corporation</b></h5>
+          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2001 - <span class="w3-tag w3-blue-gray w3-round">Current</span></h6>
+          <p>Working as part of a team to create and maintain resource websites, event registration sites, survey pages, and web forms for both a large global customer base as well as internal audiences. </p>
+          <hr>
+        </div>
+
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Photographer / Freelance</b></h5>
+          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1990 - <span class="w3-tag w3-blue-gray w3-round">Current</span></h6>
+          <p>Freelance is not free and it's been a life-long pursuit for me - Currently pursuing life-styled corporate photography for PR campaigns and events for local Denver companies such as Studio Six Branding and The Denver dumb friends league. </p>
+          <hr>
+        </div>
+
+      </div>
+
+    <!-- End Right Column -->
+    </div>
+
+  <!-- End Grid -->
+  </div>
+
+  <!-- End Page Container -->
 </div>
 
-<!-- Javascript for quicker load -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!--<script src="js/script.js"></script>-->
+<footer class="w3-container w3-blue-gray w3-center w3-margin-top">
+  <p>Knowledge is the new wealth.</p>
+  <a href="https://www.instagram.com/walder.photography/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  <!--
+  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+
+  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"></i>
+  <i class="fa fa-linkedin w3-hover-opacity"></i>
+-->
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
 </body>
 </html>
