--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>GitHub</b></h5>
           <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2017</h6>
           <p>Started github account to practice git, which led me setup this blog which is based on one of the templates offered by w3schools. I selected <a href="https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_cv&stacked=h" target="_blank">this responsive framework</a> over others because it offered a great looking page straight out of the box, it allowed me to dedicate my time to content over design which was my main goal.</p><br>
-
+          <p>Here are my typical git commands I use to push each update</p>
           <div class="w3-row">
             <div class="w3-col s6 m6 l6  w3-border w3-container w3-margin w3-padding-3 color-gray">
               <div class="w3-light-gray text-gray">MINGW64:/c/GitHub/kwalder303.github.io</div>
               & git status<br>
-              & git add<br>
+              & git add .<br>
               & git commit -m "notes"<br>
               & git push origin master
             </div>
