--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web developer / Photographer</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web developer / Content designer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Denver, Colorado</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>kwalder303@gmail.com</p>
           <!--<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>1224435534</p>-->
@@ -36,28 +36,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue-gray"></i>Proficiency</b></p>
 
-
-          <p>Adobe Photoshop</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:90%">90%</div>
-          </div>
-
           <p>HTML5/CSS3</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:90%">90%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:95%">90%</div>
           </div>
 
           <p>JavaScript</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:80%">
-              <div class="w3-center w3-text-white">80%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:75%">
+              <div class="w3-center w3-text-white">75%</div>
             </div>
           </div>
 
           <p>PHP</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:80%">
-              <div class="w3-center w3-text-white">80%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:75%">
+              <div class="w3-center w3-text-white">75%</div>
             </div>
           </div>
 
@@ -69,6 +63,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Management</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:50%">50%</div>
+          </div>
+
+          <p>Adobe CC</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:97%">97%</div>
           </div>
 
           <br>
@@ -146,14 +145,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Working as part of a team to create and maintain resource websites, event registration sites, survey pages, and web forms for both a large global customer base as well as internal audiences. </p>
           <hr>
         </div>
-
+<!--
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Photographer / Freelance</b></h5>
           <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1990 - <span class="w3-tag w3-blue-gray w3-round">Current</span></h6>
           <p>Freelance is not free and it's been a life-long pursuit for me - Currently pursuing life-styled corporate photography for PR campaigns and events for local Denver companies such as Studio Six Branding and The Denver dumb friends league. </p>
           <hr>
         </div>
-
+-->
       </div>
 
     <!-- End Right Column -->
