--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://avatars2.githubusercontent.com/u/30003306?v=3&s=460" style="width:100%" alt="Avatar">
+          <img src="colorado-developer.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-light-gray">
             <h2>Krzysztof</h2>
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web developer / Content designer</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web developer / Content creator</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Denver, Colorado</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>kwalder303@gmail.com</p>
           <!--<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>1224435534</p>-->
@@ -86,8 +86,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <a href="https://www.w3schools.com/" target="_blank">https://www.w3schools.com/</a><br>
           <a href="https://stackoverflow.com/" target="_blank">https://stackoverflow.com/</a><br>
           <a href="https://www.codeschool.com" target="_blank">https://www.codeschool.com</a><br>
-          <a href="https://codepen.io/" target="_blank">https://codepen.io/</a><br>
           <a href="https://www.taniarascia.com" target="_blank">https://www.taniarascia.com</a><br>
+          <a href="https://codepen.io/kdubz" target="_blank">CODEPEN</a>
 <!--
 <a href="" target="_blank"></a><br>
 <a href="" target="_blank"></a><br>
