--- a/index.html
+++ b/index.html
@@ -132,14 +132,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </div>
           </div>
 
-          Example to clone a git repository 
-          <div class="w3-row">
-            <div class="w3-col s6 m6 l6  w3-border w3-container w3-margin w3-padding-3 color-gray">
+          <p> Other examples:</p>
+            <ul>
+              <li>$ git clone https://github.com/usrname/usrname.github.io<br>Example to clone a git repository</li>
+              <li>$ git add filename - can be used to add a specific file
+            </ul>
 
-              $ git clone https://github.com/kwalder303/kwalder303.github.io
 
-            </div>
-          </div>
 
         </div>
       </div>
