--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>kwalder303 | Krzysztof</title>
+<title>kwalder303 | My Notes</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
@@ -24,11 +24,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-display-container">
           <img src="colorado-developer.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-light-gray">
-            <h2>Krzysztof</h2>
+            <h2>Me</h2>
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web developer / Content creator</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web/Content Developer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Denver, Colorado</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>kwalder303@gmail.com</p>
           <!--<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>1224435534</p>-->
@@ -102,7 +102,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
 
       <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Blog</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Notes</h2>
         <!--
         <div class="w3-container">
           <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
@@ -112,14 +112,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         -->
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>About (web development)</b></h5>
-          <p>Starts with music and a good place to tune in is a <a href="https://www.shoutcast.com/">SHOUTcast</a> streaming audio radio station. My favorite for coding is the electronic/ambient genre, because it helps me zone into the code and isolate everything else. My workspace also plays a key role to spending a lot of time in front of computer and I believe it should be creative and rich in texture. Another great place to visit is the <a href="https://www.reddit.com/r/webdev/" target="_blank"> webdev sub reddit</a> which I visit periodically.</p>
+          <h5 class="w3-opacity"><b>About webwork</b></h5>
+          <p>For me this starts with music and a good place to tune in is a <a href="https://www.shoutcast.com/">SHOUTcast</a> streaming audio radio station. My favorite for coding is the electronic/ambient genre, because it helps me zone into the code and isolate everything else. My workspace also plays a key role to spending a lot of time in front of computer and I believe it should be creative and rich in texture. Another great place to visit is the <a href="https://www.reddit.com/r/webdev/" target="_blank"> webdev sub reddit</a> which I visit periodically.</p>
           <hr>
         </div>
 
         <div class="w3-container">
           <h5 class="w3-opacity"><b>GitHub</b></h5>
-          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2017</h6>
+          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>7/17</h6>
           <p>Started github account to practice git, which led me setup this blog which is based on one of the templates offered by w3schools. I selected <a href="https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_cv&stacked=h" target="_blank">this responsive framework</a> over others because it offered a great looking page straight out of the box, it allowed me to dedicate my time to content over design which was my main goal.</p><br>
           <p>Here are my typical git commands I use to push each update</p>
           <div class="w3-row">
@@ -135,7 +135,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p> Other examples:</p>
             <ul>
               <li>$ git clone https://github.com/usrname/usrname.github.io<br>Example to clone a git repository</li>
-              <li>$ git add filename - can be used to add a specific file
+              <li>$ git add filename - can be used to add a specific file</li>
             </ul>
 
 
