--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-blue-gray w3-center w3-margin-top">
   <p>Knowledge is the new wealth.</p>
+  <p>Data is the new wealth.</p>
+  <p>Privacy is the new wealth.</p>
   <a href="https://www.instagram.com/walder.photography/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
   <!--
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
