--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web/Content Developer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Denver, Colorado</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>kwalder303@gmail.com</p>
           <!--<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>1224435534</p>-->
           <hr>
 
@@ -120,7 +119,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>GitHub</b></h5>
           <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>7/17</h6>
-          <p>Started github account to practice git, which led me setup this blog which is based on one of the templates offered by w3schools. I selected <a href="https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_cv&stacked=h" target="_blank">this responsive framework</a> over others because it offered a great looking page straight out of the box, it allowed me to dedicate my time to content over design which was my main goal.</p><br>
+          <p>Started github account to practice git, which led me setup this blog which is based on one of the templates offered by w3schools. I selected <a href="https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_cv&stacked=h" target="_blank">this responsive framework</a> over others because it offered a great looking page straight out of the box, it allowed me to dedicate my time to content over design which was my main goal.</p>
           <p>Here are my typical git commands I use to push each update</p>
           <div class="w3-row">
             <div class="w3-col s6 m6 l6  w3-border w3-container w3-margin w3-padding-3 color-gray">
@@ -129,9 +128,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               & git add .<br>
               & git commit -m "notes"<br>
               & git push origin master
+
             </div>
           </div>
-
+        <p>Funnote: when you git pull origin master with a single file hoping to pull only that file to a repository full of content you loose all your content :(</p>
           <p> Other examples:</p>
             <ul>
               <li>$ git clone https://github.com/usrname/usrname.github.io<br>Example to clone a git repository</li>
