cleaned out unnecesary content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web/Content Developer</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Denver, Colorado</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Colorado</p>
           <!--<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>1224435534</p>-->
           <hr>
 
@@ -100,68 +100,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <!-- Right Column -->
     <div class="w3-twothird">
 
+
       <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Notes</h2>
-        <!--
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
-          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>Web Development! All I need to know in one place</p>
-          <hr>
-        </div>
-        -->
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>About webwork</b></h5>
-          <p>For me this starts with music and a good place to tune in is a <a href="https://www.shoutcast.com/">SHOUTcast</a> streaming audio radio station. My favorite for coding is the electronic/ambient genre, because it helps me zone into the code and isolate everything else. My workspace also plays a key role to spending a lot of time in front of computer and I believe it should be creative and rich in texture. Another great place to visit is the <a href="https://www.reddit.com/r/webdev/" target="_blank"> webdev sub reddit</a> which I visit periodically.</p>
-          <hr>
-        </div>
-
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>GitHub</b></h5>
-          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>7/17</h6>
-          <p>Started github account to practice git, which led me setup this blog which is based on one of the templates offered by w3schools. I selected <a href="https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_cv&stacked=h" target="_blank">this responsive framework</a> over others because it offered a great looking page straight out of the box, it allowed me to dedicate my time to content over design which was my main goal.</p>
-          <p>Here are my typical git commands I use to push each update</p>
-          <div class="w3-row">
-            <div class="w3-col s6 m6 l6  w3-border w3-container w3-margin w3-padding-3 color-gray">
-              <div class="w3-light-gray text-gray">MINGW64:/c/GitHub/kwalder303.github.io</div>
-              & git status<br>
-              & git add .<br>
-              & git commit -m "notes"<br>
-              & git push origin master
-
-            </div>
+        <h2 class="w3-text-grey w3-padding-16">
+          <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Notes</h2>
+          <div class="w3-container">
+      
           </div>
-        <p>Funnote: when you git pull origin master with a single file hoping to pull only that file to a repository full of content you loose all your content :(</p>
-          <p> Other examples:</p>
-            <ul>
-              <li>$ git clone https://github.com/usrname/usrname.github.io<br>Example to clone a git repository</li>
-              <li>$ git add filename - can be used to add a specific file</li>
-            </ul>
-
-
-
-        </div>
       </div>
-
-
-
-      <div class="w3-container w3-card-2 w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Professional experience</h2>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Web developer @ West Corporation</b></h5>
-          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2001 - <span class="w3-tag w3-blue-gray w3-round">Current</span></h6>
-          <p>Working as part of a team to create and maintain resource websites, event registration sites, survey pages, and web forms for both a large global customer base as well as internal audiences. </p>
-          <hr>
-        </div>
-<!--
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Photographer / Freelance</b></h5>
-          <h6 class="w3-text-blue-gray"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1990 - <span class="w3-tag w3-blue-gray w3-round">Current</span></h6>
-          <p>Freelance is not free and it's been a life-long pursuit for me - Currently pursuing life-styled corporate photography for PR campaigns and events for local Denver companies such as Studio Six Branding and The Denver dumb friends league. </p>
-          <hr>
-        </div>
--->
-      </div>
+      
 
     <!-- End Right Column -->
     </div>
