re-formated info in the left column

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Colorado</p>
           <!--<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>1224435534</p>-->
           <hr>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue-gray"></i>Resources</b></p>
+          <a href="https://www.w3schools.com/" target="_blank">https://www.w3schools.com/</a><br>
+          <a href="https://stackoverflow.com/" target="_blank">https://stackoverflow.com/</a><br>
+          <a href="https://www.codeschool.com" target="_blank">https://www.codeschool.com</a><br>
+          <a href="https://www.taniarascia.com" target="_blank">https://www.taniarascia.com</a><br>
+          <a href="https://codepen.io/kdubz" target="_blank">CODEPEN</a>
+
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue-gray"></i>Proficiency</b></p>
 
@@ -69,28 +76,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:97%">97%</div>
           </div>
 
-          <br>
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue-gray"></i>Languages</b></p>
-          <p>English</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-blue-gray" style="height:24px;width:99%"></div>
-          </div>
-          <p>Polish</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-blue-gray" style="height:24px;width:99%"></div>
-          </div>
 
-          <br>
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue-gray"></i>Resources</b></p>
-          <a href="https://www.w3schools.com/" target="_blank">https://www.w3schools.com/</a><br>
-          <a href="https://stackoverflow.com/" target="_blank">https://stackoverflow.com/</a><br>
-          <a href="https://www.codeschool.com" target="_blank">https://www.codeschool.com</a><br>
-          <a href="https://www.taniarascia.com" target="_blank">https://www.taniarascia.com</a><br>
-          <a href="https://codepen.io/kdubz" target="_blank">CODEPEN</a>
-<!--
-<a href="" target="_blank"></a><br>
-<a href="" target="_blank"></a><br>
--->
         </div>
       </div><br>
 
@@ -105,7 +91,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16">
           <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Notes</h2>
           <div class="w3-container">
-      
+            <p>Nothing going on here.</p>
           </div>
       </div>
       
