Updated proficiencies and experience

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>kwalder303 | My Notes</title>
+<title>Client-side developer, Denver Colorado</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -8,6 +8,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+a {text-decoration: none;}
+i {color:#48bb42;}
+a:hover {color:#48bb42;}
+li {list-style-type:square;}
 </style>
 <body class="w3-light-grey">
 
@@ -24,58 +28,79 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-display-container">
           <img src="colorado-developer.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-light-gray">
-            <h2>Me</h2>
+            <h2>KW's</h2>
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Web/Content Developer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Colorado</p>
-          <!--<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>1224435534</p>-->
+          <p><i class="fa fa-check-square fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Client-side Developer</p>
           <hr>
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue-gray"></i>Resources</b></p>
-          <a href="https://www.w3schools.com/" target="_blank">https://www.w3schools.com/</a><br>
-          <a href="https://stackoverflow.com/" target="_blank">https://stackoverflow.com/</a><br>
-          <a href="https://www.codeschool.com" target="_blank">https://www.codeschool.com</a><br>
-          <a href="https://www.taniarascia.com" target="_blank">https://www.taniarascia.com</a><br>
-          <a href="https://codepen.io/kdubz" target="_blank">CODEPEN</a>
+          <p class="w3-large"><b><i class="fa fa-briefcase fa-fw w3-margin-right w3-text-blue-gray"></i>Key Proficiencies</b></p>
+          <ul>
+            <li>HTML/BEM/CSS/DOM/JavaScript/PHP</li>
+            <li>VSC/Webpack/CLI/Git</li>
+            <li>JQuery/SASS</li>
+            <li>Adobe CC</li>
+          </ul>
+          <p class="w3-large"><b><i class="fa fa-check-circle fa-fw w3-margin-right w3-text-blue-gray"></i>Passed Experience</b></p>
+          <ul>
+              <li>Bootstrap/Materialize</li>
+              <li>SEO/UX/UI</li>
+                  <li>Content Management Systems (aka CMS)</li>
+                  <li>Cross-Browser Testing</li>
+                  <li>Cross-Platform Testing</li>
+                  <li>Cross-Device Testing</li>
+                  <li>Accessibility</li>
+                  <li>Search Engine Optimization (aka SEO)</li>
+                  <li>Interaction or User Interface Design</li>
+                  <li>User Experience</li>
+                  <li>Usability</li>
+                  <li>Wire-framing</li>
+                  <li>CSS Layout / Grids</li>
+                  <li>DOM Manipulation (e.g., jQuery)</li>
+                  <li>Mobile Web Performance</li>
+                  <li>Version Control (e.g., GIT)</li>
+                  <li>Data Formats (e.g., JSON, XML)</li>
+                  <li>Data APIs (e.g Restful API)</li>
+                  <li>Web Font Embedding</li>
+                  <li>Regular Expressions</li>
+                  <li>Responsive Web Design</li>
+                  <li>Dependency Managers</li>
+                  <li>Package Managers</li>
+                  <li>CSS Animation</li>
+                  <li>Templating Strategies</li>
+                  <li>Web/Browser Security</li>
+                  <li>Browser Developer Tools</li>
+                  <li>WordPress/Migration</li>
+                </ul>
+          <p class="w3-large"><b><i class="fa fa-certificate fa-fw w3-margin-right w3-text-blue-gray"></i>Related Titles</b></p>
+          <ul>
+            <li>Front-End Developer</li>
+            <li>CSS/HTML Developer</li>
+            <li>Front-End Web Designer</li>
+            <li>Programmer Analyst</li>
+            <li>UI Developer/Engineer</li>
+            <li>Accessibility Developer</li>
+            <li>Front-End Testing/QA</li>
+            <li>Systems Analyst</li>
+            <li>GFX Designer <sup>/ Photographer</sup></li>
+          </ul>
 
+          <p class="w3-large"><b><i class="fa fa-link fa-fw w3-margin-right w3-text-blue-gray"></i>URL's</b></p>
+          <ul class="urls">
+              <li><a href="https://frontendmasters.com/books/front-end-handbook/2019/" target="_blank">Front-end Handbook</a></li>
+          </ul>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue-gray"></i>Proficiency</b></p>
-
-          <p>HTML5/CSS3</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:95%">90%</div>
+          <div class="w3-padding-16">
+            <a class="w3-padding-large" href="https://www.linkedin.com/in/krzysztof-walder/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+            <a class="w3-padding-large" href="https://www.instagram.com/walderphoto/" target="_blank" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+            <a class="w3-padding-large" href="https://twitter.com/WalderKrzysztof" target="_blank" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+            <a class="w3-padding-medium" href="https://github.com/kwalder303" target="_blank" title="github">G</a> | 
+            <a class="w3-padding-medium" href="https://www.aldertof.com/" target="_blank" title="my website">A</a> | 
+            <a class="w3-padding-medium" href="https://walder.photography/" target="_blank" title="my photography">P</a> | 
+            <a class="w3-padding-medium" href="https://www.aldertof.co/" target="_blank" title="my design style">S</a>
           </div>
-
-          <p>JavaScript</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:75%">
-              <div class="w3-center w3-text-white">75%</div>
-            </div>
-          </div>
-
-          <p>PHP</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:75%">
-              <div class="w3-center w3-text-white">75%</div>
-            </div>
-          </div>
-
-          <p>Responsve frameworks</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:80%">80%</div>
-          </div>
-
-          <p>Management</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:50%">50%</div>
-          </div>
-
-          <p>Adobe CC</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-gray" style="width:97%">97%</div>
-          </div>
-
+          <hr>
 
         </div>
       </div><br>
@@ -85,15 +110,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <!-- Right Column -->
     <div class="w3-twothird">
-
-
       <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16">
-          <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue-gray"></i>Notes</h2>
-          <div class="w3-container">
-            <p>Nothing going on here.</p>
-          </div>
+        <p class="w3-text-grey w3-padding-16">
+            <i class="fa fa-bed w3-text-grey"></i>
+            <i class="fa fa-battery-full w3-text-grey"></i>
+            <i class="fa fa-coffee w3-text-grey"></i>
+            <i class="fa fa-code w3-text-grey"></i>
+            <i class="fa fa-battery-half w3-text-grey"></i>
+            <i class="fa fa-coffee w3-text-grey"></i>
+            <i class="fa fa-battery-empty w3-text-grey"></i>
+            <i class="fa fa-bed w3-text-grey"></i>
+            <p class="w3-text-grey">Nothing else is going on.</p>
+        </p>
       </div>
+    </div>
       
 
     <!-- End Right Column -->
@@ -109,15 +139,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <p>Knowledge is the new wealth.</p>
   <p>Data is the new wealth.</p>
   <p>Privacy is the new wealth.</p>
-  <a href="https://www.instagram.com/walder.photography/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-  <!--
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
--->
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
