--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Client-side developer, Denver Colorado</title>
+<title>Website developer, Denver Colorado</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -28,12 +28,11 @@ li {list-style-type:square;}
         <div class="w3-display-container">
           <img src="colorado-developer.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-light-gray">
-            <h2>KW's</h2>
           </div>
         </div>
         <div class="w3-container">
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Colorado</p>
-          <p><i class="fa fa-check-square fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Client-side Developer</p>
+          <p><i class="fa fa-check-square fa-fw w3-margin-right w3-large w3-text-blue-gray"></i>Website Developer</p>
           <hr>
           <p class="w3-large"><b><i class="fa fa-briefcase fa-fw w3-margin-right w3-text-blue-gray"></i>Key Proficiencies</b></p>
           <ul>
@@ -42,50 +41,7 @@ li {list-style-type:square;}
             <li>JQuery/SASS</li>
             <li>Adobe CC</li>
           </ul>
-          <p class="w3-large"><b><i class="fa fa-check-circle fa-fw w3-margin-right w3-text-blue-gray"></i>Passed Experience</b></p>
-          <ul>
-              <li>Bootstrap/Materialize</li>
-              <li>SEO/UX/UI</li>
-                  <li>Content Management Systems (aka CMS)</li>
-                  <li>Cross-Browser Testing</li>
-                  <li>Cross-Platform Testing</li>
-                  <li>Cross-Device Testing</li>
-                  <li>Accessibility</li>
-                  <li>Search Engine Optimization (aka SEO)</li>
-                  <li>Interaction or User Interface Design</li>
-                  <li>User Experience</li>
-                  <li>Usability</li>
-                  <li>Wire-framing</li>
-                  <li>CSS Layout / Grids</li>
-                  <li>DOM Manipulation (e.g., jQuery)</li>
-                  <li>Mobile Web Performance</li>
-                  <li>Version Control (e.g., GIT)</li>
-                  <li>Data Formats (e.g., JSON, XML)</li>
-                  <li>Data APIs (e.g Restful API)</li>
-                  <li>Web Font Embedding</li>
-                  <li>Regular Expressions</li>
-                  <li>Responsive Web Design</li>
-                  <li>Dependency Managers</li>
-                  <li>Package Managers</li>
-                  <li>CSS Animation</li>
-                  <li>Templating Strategies</li>
-                  <li>Web/Browser Security</li>
-                  <li>Browser Developer Tools</li>
-                  <li>WordPress/Migration</li>
-                </ul>
-          <p class="w3-large"><b><i class="fa fa-certificate fa-fw w3-margin-right w3-text-blue-gray"></i>Related Titles</b></p>
-          <ul>
-            <li>Front-End Developer</li>
-            <li>CSS/HTML Developer</li>
-            <li>Front-End Web Designer</li>
-            <li>Programmer Analyst</li>
-            <li>UI Developer/Engineer</li>
-            <li>Accessibility Developer</li>
-            <li>Front-End Testing/QA</li>
-            <li>Systems Analyst</li>
-            <li>GFX Designer <sup>/ Photographer</sup></li>
-          </ul>
-
+        
           <p class="w3-large"><b><i class="fa fa-link fa-fw w3-margin-right w3-text-blue-gray"></i>URL's</b></p>
           <ul class="urls">
               <li><a href="https://frontendmasters.com/books/front-end-handbook/2019/" target="_blank">Front-end Handbook</a></li>
@@ -95,10 +51,9 @@ li {list-style-type:square;}
             <a class="w3-padding-large" href="https://www.linkedin.com/in/krzysztof-walder/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
             <a class="w3-padding-large" href="https://www.instagram.com/walderphoto/" target="_blank" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
             <a class="w3-padding-large" href="https://twitter.com/WalderKrzysztof" target="_blank" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-            <a class="w3-padding-medium" href="https://github.com/kwalder303" target="_blank" title="github">G</a> | 
-            <a class="w3-padding-medium" href="https://www.aldertof.com/" target="_blank" title="my website">A</a> | 
-            <a class="w3-padding-medium" href="https://walder.photography/" target="_blank" title="my photography">P</a> | 
-            <a class="w3-padding-medium" href="https://www.aldertof.co/" target="_blank" title="my design style">S</a>
+            <a class="w3-padding-medium" href="https://github.com/kwalder303" target="_blank" title="github">G.</a>  
+            <a class="w3-padding-medium" href="https://aldertof.co/" target="_blank" title="Work">S.</a>
+            <a class="w3-padding-medium" href="http://walder.photography/" target="_blank" title="Photography">P.</a> 
           </div>
           <hr>
 
